css/style.css
@font-face{
  font-family: 'Fira Code iScript';
  src: url('//cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}
@font-face{
  font-family: 'Fira Code iScript';
  src: url('//cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Italic.ttf') format('truetype');
  font-weight: 400;
  font-style: italic;
}
@import url('//cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css');
@import url('//fonts.googleapis.com/css?effect=anaglyph|brick-sign');

:root {
  --bg: cornsilk;
  --color: black;
  --font: 'Fira Code iScript', monospace;
  --fontsize: 100%;
  --highlight: none;

  --width: 60ch;
  --padding: 1ch;
  --inner-space: 10ch;
  --outer-space: 0ch;

  --brightness: 1;
  --contrast: 100%;
  --grayscale: 0%;
  --hue-rotate: 0deg;
  --invert: 0%;
  --saturate: 100%;
  --sepia: 0%;
  --blur: 0px;

  --scale: 1.0;
  --perspective: 800px;
  --originx: 50%;
  --originy: 50%;
  --rotatex: 20deg;
  --rotatey: 10deg;
  --rotatez: 0deg;
  --translatez: 0px;
}

.inner {
  font-size: var(--fontsize);
  background: var(--bg);
  transform:
    scale(var(--scale))
    perspective(var(--perspective))
    rotateX(var(--rotatex))
    rotateY(var(--rotatey))
    rotateZ(var(--rotatez))
    translateZ(var(--translatez));
  transform-origin: var(--originx) var(--originy);
  transform-style: preserve-3d;
  position: fixed;
}

.bd-default .inner {
  overflow: hidden;
}

.fx {
  width: 300ch;
  height: 200ch;
  position: fixed;
  top: 0px;
  left: 0px;
  overflow: hidden;
  margin: 0;
  padding: 0;
  background: transparent;
  filter:
    brightness(var(--brightness))
    contrast(var(--contrast))
    grayscale(var(--grayscale))
    hue-rotate(var(--hue-rotate))
    invert(var(--invert))
    saturate(var(--saturate))
    sepia(var(--sepia))
    blur(var(--blur));
}

.vignette-layer {
  mix-blend-mode: var(--vignette-blend);
  pointer-events: none;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
}

* {
  font-family: 'Fira Code iScript', monospace;
  transition: none;
  animation: none;
  margin: 0;
  padding: 0;
  line-height: 120%;
}

html, body, #wrapper, .container {
  overflow: hidden;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  background: transparent;
  overflow: hidden;
}

/* Sections */
.bd-glory #custom section.section {
  position: fixed;
  width: var(--width);
  height: min-content;
  padding: var(--padding);
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  z-index: 1;
}

.section .content {
  display: block;
  margin: auto;
  position: relative;
  color: rgba(0,0,0,0.5);
  opacity: 1;
  padding-top: 6px;
}

.section a {
  color: #4F6580;
  text-decoration: none;
}

.section ul, .section ol {
  margin: 0 1em;
}

.section a.handle {
  pointer-events: none;
  color: #666;
  text-shadow: 0px 1px 1px white, 0px 2px 2px grey; /*, 0px 4px 1px white, 0px 6px 8px grey;*/
}

.section a:hover {
  background: rgba(255,255,100,0.25);
  box-shadow: 0 0 6px rgba(255,255,100,0.25);
}

.section p {
  margin-bottom: 0.5em;
}

/* Info panel */
.nav a {
  color: #76869C;
}

.nav h1:first-child {
  font-size: 1.5em;
}

.nav .toc a.current {
  color: gray;
  pointer-events: none;
}

.nav .toc a.current::before {
  content: "> ";
}

#custom .nav a:hover {
  color: #fff;
}

/* Scrollbar styling */
::-webkit-scrollbar {
    background: rgba(255, 255, 255, 0.2);
}
::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.5);
    /* border: solid whiteSmoke 4px; */
    border-radius: 3px;
}
::-webkit-scrollbar-thumb:hover {
    background-color: rgba(255, 255, 255, 1);
}

#custom pre, pre .hljs,
#custom .section code {
  background: none !important;
  box-shadow: none;
}

#custom code,
#custom pre * {
  font-family: var(--font);
}

/* tiltshift styles */

.code.tiltshift-elegant {
  -webkit-mask-box-image: linear-gradient(transparent 0%, black 30%, black 50%, black 70%, transparent 100%);
}

.code-overlay.tiltshift-elegant {
  display: block;
  filter: blur(2px);
  -webkit-mask-box-image: linear-gradient(black 0%, transparent 50%, black 100%);
}

.code.tiltshift-extreme {
  -webkit-mask-box-image: linear-gradient(transparent 0%, black 50%, transparent 100%);
}

.code-overlay.tiltshift-extreme {
  display: block;
  filter: blur(4px);
  -webkit-mask-box-image: linear-gradient(black 0%, transparent 40%, black 100%);
}

.code-overlay {
  display: none;
  position: absolute;
  top: -1em;
  left: 0;
  background: none;
  pointer-events: none;
}

